# ArkDesk

./: .gitignore  Makefile  package-lock.json  package.json  tailwind.config.js
scripts/: orchestrate.mjs  unix-orchestrate.sh  win-orchestrate.ps1
src/: App.tsx  AppRouter.tsx  index.css  main.tsx  routes.ts  theme.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin_client.rs  cleanup.rs  commands.rs  endpoints.rs  install.rs  lib.rs  main.rs  manifest.rs  miner.rs  node_control.rs  rpc.rs  runner.rs  settings.rs  state.rs  status.rs  types.rs  validate.rs  watch.rs
src/bridge/: ark.ts  useRpc.ts
src/components/: BackgroundFX.tsx  BootScreen.tsx  Shell.tsx
src/components/ide/: CodeEditor.tsx  JsonEditor.tsx  SplitPane.tsx  StatusBar.tsx  Tabs.tsx
src/hooks/: useCached.ts  useNode.ts
src/overlays/: OverlayRoot.tsx
src/pages/: ArkAI.tsx  Block.tsx  DevHarness.tsx  Explore.tsx  Home.tsx  HomePro.tsx  IDE.tsx  InstallPrompt.tsx  Mempool.tsx  MinerSettings.tsx  Node.tsx  NodeSettings.tsx  Settings.tsx  Tx.tsx  Wallet.tsx  World.tsx  _Home.tsx  index.ts
src/services/: nodeBus.ts  rpc.ts
src/ui/: Confirm.tsx  CopyTooltip.tsx  Portal.tsx  ProgressSheet.tsx  Section.tsx  Toaster.tsx  atoms.tsx
