[package]
name = "arkdesk"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkdesk_lib"
path = "src/lib.rs"

[[bin]]
name = "arkdesk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

# enable insecure dev certs toggle:
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }

# tauri v2 — NO `macros` feature in v2
tauri = { version = "2.8.4", features = ["devtools"] }
tauri-plugin-opener = "2.2.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
